[gd_scene format=3 uid="uid://cipjvpn3l8a48"]

[ext_resource type="Script" uid="uid://dr3siyyotpypu" path="res://src/page/project/project_page.gd" id="1_ujekw"]
[ext_resource type="Texture2D" uid="uid://bigyx4j1euktf" path="res://asset/icon/add.svg" id="2_8oi35"]
[ext_resource type="Texture2D" uid="uid://bsia01kbmakd0" path="res://asset/icon/project.svg" id="2_s6ogv"]

[node name="ProjectPage" type="VBoxContainer" unique_id=828684455]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8
script = ExtResource("1_ujekw")

[node name="HBoxContainer2" type="HBoxContainer" parent="." unique_id=37617909]
layout_mode = 2
theme_override_constants/separation = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer2" unique_id=1261756612]
layout_mode = 2
texture = ExtResource("2_s6ogv")
expand_mode = 3
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer2" unique_id=259562586]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "TITLE_PROJECT"

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=933162693]
layout_mode = 2

[node name="ImportButton" type="Button" parent="HBoxContainer" unique_id=1665693487]
layout_mode = 2
tooltip_text = "PROJECT_IMPORT_HINT"
text = "PROJECT_IMPORT"
icon = ExtResource("2_8oi35")
expand_icon = true

[node name="ImportFileDialog" type="FileDialog" parent="HBoxContainer/ImportButton" unique_id=584780497]
oversampling_override = 1.0
title = "Open a File"
initial_position = 1
ok_button_text = "DIALOG_CONFIRM"
dialog_hide_on_ok = true
cancel_button_text = "DIALOG_CANCEL"
file_mode = 0
access = 2
filters = PackedStringArray("project.godot")
use_native_dialog = true
folder_creation_enabled = false
deleting_enabled = false

[node name="PanelContainer" type="PanelContainer" parent="." unique_id=639309613]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer" unique_id=1139310194]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/ScrollContainer" unique_id=392487920]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="CardContainer" type="GridContainer" parent="PanelContainer/ScrollContainer/MarginContainer" unique_id=1682402761]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[connection signal="pressed" from="HBoxContainer/ImportButton" to="." method="_on_import_button_pressed"]
[connection signal="file_selected" from="HBoxContainer/ImportButton/ImportFileDialog" to="." method="_on_import_file_dialog_file_selected"]
